--- a/index.html
+++ b/index.html
@@ -156,6 +156,62 @@
           </div>
         </section>
         <!-- End of Section 2 -->
+
+        <!-- Section 3 -->
+        <section class="section-3">
+          <h1 class="section-3-heading">The world prefers Paypal</h1>
+          <div class="features">
+            <div class="feature">
+              <h3 class="feature-heading">Advanced Protection</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+            <div class="feature">
+              <h3 class="feature-heading">Fast Payments</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+            <div class="feature">
+              <h3 class="feature-heading">Global Reach</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+            <div class="feature">
+              <h3 class="feature-heading">Easy Integration</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+            <div class="feature">
+              <h3 class="feature-heading">Simple and Convenient</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+            <div class="feature">
+              <h3 class="feature-heading">24/7 Service</h3>
+              <p class="feature-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                quis similique blanditiis quam maxime quibusdam aliquid dolorum
+                laborum debitis voluptatibus! Nemo dolorum quo sed consequatur?
+              </p>
+            </div>
+          </div>
+        </section>
+        <!-- End of Section 3 -->
       </div>
       <!-- End of Front Page -->
     </div>
