--- a/index.html
+++ b/index.html
@@ -212,6 +212,31 @@
           </div>
         </section>
         <!-- End of Section 3 -->
+
+        <!-- Section 4 -->
+        <section class="section-4">
+          <h1 class="section-4-heading">Get started with Paypal</h1>
+          <div class="section-4-content">
+            <div class="section-4-img-wrapper">
+              <img src="images/macbook.png" alt="macbook" />
+            </div>
+            <ul class="section-4-list">
+                <li class="section-4-list-item">
+                    <span class="number">1</span>
+                    <span>Setup <a href="#">A Business Account</a></span>
+                </li>
+                <li class="section-4-list-item">
+                    <span class="number">2</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></span>
+                </li>
+                <li class="section-4-list-item">
+                    <span class="number">3</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></span>
+                </li>
+            </ul>
+          </div>
+        </section>
+        <!-- End of Section 4 -->
       </div>
       <!-- End of Front Page -->
     </div>
