--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="section-1">
           <div class="navbar-wrapper">
             <nav class="navbar">
-              <div class="navbar-logo">
+              <div class="navbar-logo logo">
                 <span class="p-1">P</span>
                 <span class="p-2">P</span>
                 Paypal
@@ -107,8 +107,8 @@
                 </li>
               </ul>
               <div class="navbar-buttons">
-                <buttio class="navbar-btn login-btn">Login</buttio>
-                <buttio class="navbar-btn signup-btn">Signup</buttio>
+                <button class="navbar-btn login-btn login">Login</button>
+                <button class="navbar-btn signup-btn signup">Signup</button>
               </div>
             </nav>
           </div>
@@ -241,7 +241,7 @@
         <section class="section-5">
             <div class="section-5-top">
                 <h2 class="section-5-top-heading">Sign Up and Get Started</h2>
-                <butotn class="blue-btn">Get Started</butotn>
+                <butotn class="blue-btn signup">Get Started</butotn>
             </div>
             <fotter class="footer">
                 <div class="footer-top">
@@ -288,6 +288,71 @@
         <!-- End of Section 5 -->
       </div>
       <!-- End of Front Page -->
+
+      <!-- Login Page -->
+      <div class="login-page">
+          <div class="login-page-content">
+            <div class="login-page-logo logo">
+                <span class="p-1">P</span>
+                <span class="p-2">P</span>
+                <span>Pay</span><span>Pal</span>
+            </div>
+          <form class="login-page-form">
+              <input type="text" class="form-login-input" placeholder="Email or Mobile Number">
+              <input type="password" class="form-login-input">
+              <input type="button" class="form-login-btn" value="Log In" />
+              <a href="#" class="form-login-link">Having trouble logging in?</a>
+              <span>or</span>
+              <input type="button" class="form-signup-btn signup" value="Sign Up" />
+          </form>
+          </div>
+      </div>
+      <!-- End Login Page -->
+
+      <!--  Signup Page -->
+      <div class="signup-page">
+        <div class="signup-page-top">
+          <div class="signup-page-logo logo">
+            <span class="p-1">P</span>
+            <span class="p-2">P</span>
+            Paypal
+          </div>
+          <button class="login">Log In</button>
+        </div>
+        <div class="signup-page-content">
+            <div class="signup-page-content-left">
+                <div class="content-left-images">
+                    <img src="images/person-1.jpg">
+                    <img src="images/person-2.jpg">
+                    <img src="images/person-3.jpg">
+                </div>
+                <h1>See for yourself why millions of people love PayPal</h1>
+            </div>
+            <div class="signup-page-content-right">
+                <h3>Sign up for PayPal, it's free</h3>
+                <h4>Choose from two types of accounts</h4>
+                <form class="signup-page-form">
+                    <div class="input-group">
+                        <input type="radio" name="checkbox"
+                        checked>
+                        <div class="option">
+                            <h3>Personal Account</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, doloremque adipisci? Perferendis, illum praesentium sit aspernatur accusamus est? Reiciendis, quo.</p>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <input type="radio" name="checked">
+                        <div class="option">
+                            <h3>Business Account</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, doloremque adipisci? Perferendis, illum praesentium sit aspernatur accusamus est? Reiciendis, quo.</p>
+                        </div>
+                    </div>
+                    <button class="blue-btn">Continue</button>
+                </form>
+            </div>
+        </div>
+      </div>
+        <!-- End Signup Page -->
     </div>
 
     <script src="app.js"></script>
